# geom

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests-mac.yml  tests-ub.yml  tests-win.yml  tests_imp.yml
example/: 1.py
src/geom/: abc.py  figures_2d.py  figures_2d.pyi  shapes_2d.py  shapes_2d.pyi  types.py  utils.py
tests/: test_figures_2d.py  test_shapes_2d.py
